CS35200/project2_1/y.output
Terminals unused in grammar

   DIVIDE
   DOT
   ELSE
   EXTENDS
   IF
   LENGTH
   MINUS_MINUS
   MULTIPLY
   NEW
   PLUS_PLUS
   RETURN
   THIS
   WHILE


State 48 conflicts: 8 shift/reduce
State 49 conflicts: 8 shift/reduce
State 50 conflicts: 8 shift/reduce
State 67 conflicts: 8 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    3 VarDecl: Type ID VarInit VarDeclTail SEMICOLON

    4 VarInit: %empty
    5        | EQUALS Exp

    6 VarDeclTail: %empty
    7            | COMMA ID VarInit VarDeclTail

    8 Type: INT
    9     | BOOLEAN
   10     | STRING

   11 StatementList: %empty
   12              | Statement StatementList

   13 Statement: VarDecl
   14          | SYSTEM_OUT_PRINTLN OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON
   15          | SYSTEM_OUT_PRINT OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON
   16          | ID EQUALS Exp SEMICOLON

   17 Exp: Exp Op Exp
   18    | EXCLAMATION Exp
   19    | PLUS Exp
   20    | MINUS Exp
   21    | ID
   22    | INTEGER_LITERAL
   23    | STRING_LITERAL
   24    | TRUE
   25    | FALSE

   26 Op: AND
   27   | OR
   28   | LESS
   29   | GREATER
   30   | LESS_EQUAL
   31   | GREATER_EQUAL
   32   | EQUAL_EQUAL
   33   | NOT_EQUAL


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 26
BOOLEAN (259) 9
CLASS (260) 2
CLOSED_BRACKET (261) 2
CLOSED_CURLY (262) 2
CLOSED_PARENTHESES (263) 2 14 15
COMMA (264) 7
DIVIDE (265)
DOT (266)
ELSE (267)
EQUALS (268) 5 16
EQUAL_EQUAL (269) 32
EXCLAMATION (270) 18
EXTENDS (271)
FALSE (272) 25
GREATER (273) 29
GREATER_EQUAL (274) 31
IF (275)
INT (276) 8
LENGTH (277)
LESS (278) 28
LESS_EQUAL (279) 30
MAIN (280) 2
MINUS (281) 20
MINUS_MINUS (282)
MULTIPLY (283)
NEW (284)
NOT_EQUAL (285) 33
OPEN_BRACKET (286) 2
OPEN_CURLY (287) 2
OPEN_PARENTHESES (288) 2 14 15
OR (289) 27
PLUS (290) 19
PLUS_PLUS (291)
PUBLIC (292) 2
RETURN (293)
SEMICOLON (294) 3 14 15 16
STATIC (295) 2
STRING (296) 2 10
SYSTEM_OUT_PRINT (297) 15
SYSTEM_OUT_PRINTLN (298) 14
THIS (299)
TRUE (300) 24
VOID (301) 2
WHILE (302)
INTEGER_LITERAL (303) 22
STRING_LITERAL (304) 23
ID (305) 2 3 7 16 21


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1, on right: 0
MainClass (53)
    on left: 2, on right: 1
VarDecl (54)
    on left: 3, on right: 13
VarInit (55)
    on left: 4 5, on right: 3 7
VarDeclTail (56)
    on left: 6 7, on right: 3 7
Type (57)
    on left: 8 9 10, on right: 3
StatementList (58)
    on left: 11 12, on right: 2 12
Statement (59)
    on left: 13 14 15 16, on right: 12
Exp (60)
    on left: 17 18 19 20 21 22 23 24 25, on right: 5 14 15 16 17 18
    19 20
Op (61)
    on left: 26 27 28 29 30 31 32 33, on right: 17


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    ID  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass .

    $default  reduce using rule 1 (Program)


State 4

    2 MainClass: CLASS ID . OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_CURLY  shift, and go to state 6


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    2 MainClass: CLASS ID OPEN_CURLY . PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    PUBLIC  shift, and go to state 7


State 7

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC . STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    STATIC  shift, and go to state 8


State 8

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC . VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    VOID  shift, and go to state 9


State 9

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID . MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    MAIN  shift, and go to state 10


State 10

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN . OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_PARENTHESES  shift, and go to state 11


State 11

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES . STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    STRING  shift, and go to state 12


State 12

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING . OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_BRACKET  shift, and go to state 13


State 13

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET . CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    CLOSED_BRACKET  shift, and go to state 14


State 14

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET . ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    ID  shift, and go to state 15


State 15

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID . CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    CLOSED_PARENTHESES  shift, and go to state 16


State 16

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES . OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY

    OPEN_CURLY  shift, and go to state 17


State 17

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY . StatementList CLOSED_CURLY CLOSED_CURLY

    BOOLEAN             shift, and go to state 18
    INT                 shift, and go to state 19
    STRING              shift, and go to state 20
    SYSTEM_OUT_PRINT    shift, and go to state 21
    SYSTEM_OUT_PRINTLN  shift, and go to state 22
    ID                  shift, and go to state 23

    $default  reduce using rule 11 (StatementList)

    VarDecl        go to state 24
    Type           go to state 25
    StatementList  go to state 26
    Statement      go to state 27


State 18

    9 Type: BOOLEAN .

    $default  reduce using rule 9 (Type)


State 19

    8 Type: INT .

    $default  reduce using rule 8 (Type)


State 20

   10 Type: STRING .

    $default  reduce using rule 10 (Type)


State 21

   15 Statement: SYSTEM_OUT_PRINT . OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON

    OPEN_PARENTHESES  shift, and go to state 28


State 22

   14 Statement: SYSTEM_OUT_PRINTLN . OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON

    OPEN_PARENTHESES  shift, and go to state 29


State 23

   16 Statement: ID . EQUALS Exp SEMICOLON

    EQUALS  shift, and go to state 30


State 24

   13 Statement: VarDecl .

    $default  reduce using rule 13 (Statement)


State 25

    3 VarDecl: Type . ID VarInit VarDeclTail SEMICOLON

    ID  shift, and go to state 31


State 26

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList . CLOSED_CURLY CLOSED_CURLY

    CLOSED_CURLY  shift, and go to state 32


State 27

   12 StatementList: Statement . StatementList

    BOOLEAN             shift, and go to state 18
    INT                 shift, and go to state 19
    STRING              shift, and go to state 20
    SYSTEM_OUT_PRINT    shift, and go to state 21
    SYSTEM_OUT_PRINTLN  shift, and go to state 22
    ID                  shift, and go to state 23

    $default  reduce using rule 11 (StatementList)

    VarDecl        go to state 24
    Type           go to state 25
    StatementList  go to state 33
    Statement      go to state 27


State 28

   15 Statement: SYSTEM_OUT_PRINT OPEN_PARENTHESES . Exp CLOSED_PARENTHESES SEMICOLON

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 42


State 29

   14 Statement: SYSTEM_OUT_PRINTLN OPEN_PARENTHESES . Exp CLOSED_PARENTHESES SEMICOLON

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 43


State 30

   16 Statement: ID EQUALS . Exp SEMICOLON

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 44


State 31

    3 VarDecl: Type ID . VarInit VarDeclTail SEMICOLON

    EQUALS  shift, and go to state 45

    $default  reduce using rule 4 (VarInit)

    VarInit  go to state 46


State 32

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY . CLOSED_CURLY

    CLOSED_CURLY  shift, and go to state 47


State 33

   12 StatementList: Statement StatementList .

    $default  reduce using rule 12 (StatementList)


State 34

   18 Exp: EXCLAMATION . Exp

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 48


State 35

   25 Exp: FALSE .

    $default  reduce using rule 25 (Exp)


State 36

   20 Exp: MINUS . Exp

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 49


State 37

   19 Exp: PLUS . Exp

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 50


State 38

   24 Exp: TRUE .

    $default  reduce using rule 24 (Exp)


State 39

   22 Exp: INTEGER_LITERAL .

    $default  reduce using rule 22 (Exp)


State 40

   23 Exp: STRING_LITERAL .

    $default  reduce using rule 23 (Exp)


State 41

   21 Exp: ID .

    $default  reduce using rule 21 (Exp)


State 42

   15 Statement: SYSTEM_OUT_PRINT OPEN_PARENTHESES Exp . CLOSED_PARENTHESES SEMICOLON
   17 Exp: Exp . Op Exp

    AND                 shift, and go to state 51
    CLOSED_PARENTHESES  shift, and go to state 52
    EQUAL_EQUAL         shift, and go to state 53
    GREATER             shift, and go to state 54
    GREATER_EQUAL       shift, and go to state 55
    LESS                shift, and go to state 56
    LESS_EQUAL          shift, and go to state 57
    NOT_EQUAL           shift, and go to state 58
    OR                  shift, and go to state 59

    Op  go to state 60


State 43

   14 Statement: SYSTEM_OUT_PRINTLN OPEN_PARENTHESES Exp . CLOSED_PARENTHESES SEMICOLON
   17 Exp: Exp . Op Exp

    AND                 shift, and go to state 51
    CLOSED_PARENTHESES  shift, and go to state 61
    EQUAL_EQUAL         shift, and go to state 53
    GREATER             shift, and go to state 54
    GREATER_EQUAL       shift, and go to state 55
    LESS                shift, and go to state 56
    LESS_EQUAL          shift, and go to state 57
    NOT_EQUAL           shift, and go to state 58
    OR                  shift, and go to state 59

    Op  go to state 60


State 44

   16 Statement: ID EQUALS Exp . SEMICOLON
   17 Exp: Exp . Op Exp

    AND            shift, and go to state 51
    EQUAL_EQUAL    shift, and go to state 53
    GREATER        shift, and go to state 54
    GREATER_EQUAL  shift, and go to state 55
    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    NOT_EQUAL      shift, and go to state 58
    OR             shift, and go to state 59
    SEMICOLON      shift, and go to state 62

    Op  go to state 60


State 45

    5 VarInit: EQUALS . Exp

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 63


State 46

    3 VarDecl: Type ID VarInit . VarDeclTail SEMICOLON

    COMMA  shift, and go to state 64

    $default  reduce using rule 6 (VarDeclTail)

    VarDeclTail  go to state 65


State 47

    2 MainClass: CLASS ID OPEN_CURLY PUBLIC STATIC VOID MAIN OPEN_PARENTHESES STRING OPEN_BRACKET CLOSED_BRACKET ID CLOSED_PARENTHESES OPEN_CURLY StatementList CLOSED_CURLY CLOSED_CURLY .

    $default  reduce using rule 2 (MainClass)


State 48

   17 Exp: Exp . Op Exp
   18    | EXCLAMATION Exp .

    AND            shift, and go to state 51
    EQUAL_EQUAL    shift, and go to state 53
    GREATER        shift, and go to state 54
    GREATER_EQUAL  shift, and go to state 55
    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    NOT_EQUAL      shift, and go to state 58
    OR             shift, and go to state 59

    AND            [reduce using rule 18 (Exp)]
    EQUAL_EQUAL    [reduce using rule 18 (Exp)]
    GREATER        [reduce using rule 18 (Exp)]
    GREATER_EQUAL  [reduce using rule 18 (Exp)]
    LESS           [reduce using rule 18 (Exp)]
    LESS_EQUAL     [reduce using rule 18 (Exp)]
    NOT_EQUAL      [reduce using rule 18 (Exp)]
    OR             [reduce using rule 18 (Exp)]
    $default       reduce using rule 18 (Exp)

    Op  go to state 60


State 49

   17 Exp: Exp . Op Exp
   20    | MINUS Exp .

    AND            shift, and go to state 51
    EQUAL_EQUAL    shift, and go to state 53
    GREATER        shift, and go to state 54
    GREATER_EQUAL  shift, and go to state 55
    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    NOT_EQUAL      shift, and go to state 58
    OR             shift, and go to state 59

    AND            [reduce using rule 20 (Exp)]
    EQUAL_EQUAL    [reduce using rule 20 (Exp)]
    GREATER        [reduce using rule 20 (Exp)]
    GREATER_EQUAL  [reduce using rule 20 (Exp)]
    LESS           [reduce using rule 20 (Exp)]
    LESS_EQUAL     [reduce using rule 20 (Exp)]
    NOT_EQUAL      [reduce using rule 20 (Exp)]
    OR             [reduce using rule 20 (Exp)]
    $default       reduce using rule 20 (Exp)

    Op  go to state 60


State 50

   17 Exp: Exp . Op Exp
   19    | PLUS Exp .

    AND            shift, and go to state 51
    EQUAL_EQUAL    shift, and go to state 53
    GREATER        shift, and go to state 54
    GREATER_EQUAL  shift, and go to state 55
    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    NOT_EQUAL      shift, and go to state 58
    OR             shift, and go to state 59

    AND            [reduce using rule 19 (Exp)]
    EQUAL_EQUAL    [reduce using rule 19 (Exp)]
    GREATER        [reduce using rule 19 (Exp)]
    GREATER_EQUAL  [reduce using rule 19 (Exp)]
    LESS           [reduce using rule 19 (Exp)]
    LESS_EQUAL     [reduce using rule 19 (Exp)]
    NOT_EQUAL      [reduce using rule 19 (Exp)]
    OR             [reduce using rule 19 (Exp)]
    $default       reduce using rule 19 (Exp)

    Op  go to state 60


State 51

   26 Op: AND .

    $default  reduce using rule 26 (Op)


State 52

   15 Statement: SYSTEM_OUT_PRINT OPEN_PARENTHESES Exp CLOSED_PARENTHESES . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 53

   32 Op: EQUAL_EQUAL .

    $default  reduce using rule 32 (Op)


State 54

   29 Op: GREATER .

    $default  reduce using rule 29 (Op)


State 55

   31 Op: GREATER_EQUAL .

    $default  reduce using rule 31 (Op)


State 56

   28 Op: LESS .

    $default  reduce using rule 28 (Op)


State 57

   30 Op: LESS_EQUAL .

    $default  reduce using rule 30 (Op)


State 58

   33 Op: NOT_EQUAL .

    $default  reduce using rule 33 (Op)


State 59

   27 Op: OR .

    $default  reduce using rule 27 (Op)


State 60

   17 Exp: Exp Op . Exp

    EXCLAMATION      shift, and go to state 34
    FALSE            shift, and go to state 35
    MINUS            shift, and go to state 36
    PLUS             shift, and go to state 37
    TRUE             shift, and go to state 38
    INTEGER_LITERAL  shift, and go to state 39
    STRING_LITERAL   shift, and go to state 40
    ID               shift, and go to state 41

    Exp  go to state 67


State 61

   14 Statement: SYSTEM_OUT_PRINTLN OPEN_PARENTHESES Exp CLOSED_PARENTHESES . SEMICOLON

    SEMICOLON  shift, and go to state 68


State 62

   16 Statement: ID EQUALS Exp SEMICOLON .

    $default  reduce using rule 16 (Statement)


State 63

    5 VarInit: EQUALS Exp .
   17 Exp: Exp . Op Exp

    AND            shift, and go to state 51
    EQUAL_EQUAL    shift, and go to state 53
    GREATER        shift, and go to state 54
    GREATER_EQUAL  shift, and go to state 55
    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    NOT_EQUAL      shift, and go to state 58
    OR             shift, and go to state 59

    $default  reduce using rule 5 (VarInit)

    Op  go to state 60


State 64

    7 VarDeclTail: COMMA . ID VarInit VarDeclTail

    ID  shift, and go to state 69


State 65

    3 VarDecl: Type ID VarInit VarDeclTail . SEMICOLON

    SEMICOLON  shift, and go to state 70


State 66

   15 Statement: SYSTEM_OUT_PRINT OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON .

    $default  reduce using rule 15 (Statement)


State 67

   17 Exp: Exp . Op Exp
   17    | Exp Op Exp .

    AND            shift, and go to state 51
    EQUAL_EQUAL    shift, and go to state 53
    GREATER        shift, and go to state 54
    GREATER_EQUAL  shift, and go to state 55
    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    NOT_EQUAL      shift, and go to state 58
    OR             shift, and go to state 59

    AND            [reduce using rule 17 (Exp)]
    EQUAL_EQUAL    [reduce using rule 17 (Exp)]
    GREATER        [reduce using rule 17 (Exp)]
    GREATER_EQUAL  [reduce using rule 17 (Exp)]
    LESS           [reduce using rule 17 (Exp)]
    LESS_EQUAL     [reduce using rule 17 (Exp)]
    NOT_EQUAL      [reduce using rule 17 (Exp)]
    OR             [reduce using rule 17 (Exp)]
    $default       reduce using rule 17 (Exp)

    Op  go to state 60


State 68

   14 Statement: SYSTEM_OUT_PRINTLN OPEN_PARENTHESES Exp CLOSED_PARENTHESES SEMICOLON .

    $default  reduce using rule 14 (Statement)


State 69

    7 VarDeclTail: COMMA ID . VarInit VarDeclTail

    EQUALS  shift, and go to state 45

    $default  reduce using rule 4 (VarInit)

    VarInit  go to state 71


State 70

    3 VarDecl: Type ID VarInit VarDeclTail SEMICOLON .

    $default  reduce using rule 3 (VarDecl)


State 71

    7 VarDeclTail: COMMA ID VarInit . VarDeclTail

    COMMA  shift, and go to state 64

    $default  reduce using rule 6 (VarDeclTail)

    VarDeclTail  go to state 72


State 72

    7 VarDeclTail: COMMA ID VarInit VarDeclTail .

    $default  reduce using rule 7 (VarDeclTail)
